fix(material): improve icon alignement within `.mat-form-field-prefix` & `.mat-form-field-suffix`
OUI-1818

--- a/projects/oblique/src/styles/scss/themes/material/_mat-form-field.scss
+++ b/projects/oblique/src/styles/scss/themes/material/_mat-form-field.scss
@@ -48,6 +48,16 @@
 		.mat-form-field-prefix,
 		.mat-form-field-suffix {
 			top: 0;
+
+			> .mat-datepicker-toggle {
+				position: relative;
+				top: 0.33em;
+			}
+
+			.mat-icon {
+				position: relative;
+				top: 0.15em;
+			}
 		}
 
 		.mat-form-field-subscript-wrapper {
